--- a/manifest.json
+++ b/manifest.json
@@ -8,42 +8,42 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "72x72"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "128x128"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "144x144"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "152x152"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "384x384"
         },
         {
-            "src": "./src/assets/happy_pikachu.jpg",
+            "src": "./src/assets/icon.png",
             "type": "image/png",
             "sizes": "512x512"
         }
